dark mode animation button (still with bugs)

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -76,7 +76,7 @@ header {
 		background: #ffffff00;
 		align-items: center;
 		justify-content: flex-end;
-        margin-right: 1.5rem;
+        margin-right: 15rem;
 		li {
 			padding: 1rem;
 			list-style: none;
